<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QMAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="backbutton">    &lt;&lt;     </string>
    <string name="nextbutton">    &gt;&gt;     </string>
    <string name="exitbutton">    Exit     </string>
    <string name="tools">Tools</string>
    <string name="change_subject">Change Subject</string>
    <string name="change_study">Change Study</string>
    <string name="logout">Logout</string>
    <string name="gps">GPS</string>
    <string name="timer">Count Down Timer</string>
    <string name="select_the_inteviewer_s_code">Select the Inteviewer\'s code</string>
    <string name="code_">Code:</string>
    <string name="log_in_screen">LOG IN SCREEN</string>
    <string name="_ns_">(NS)</string>
    <string name="password_">Password:</string>
    <string name="login">Login</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="what_do_yo_want_to_do_">What do yo want to do?</string>
    <string name="add_new_subject">ADD new subject</string>
    <string name="edit_subject">EDIT subject</string>
    <string name="title_activity_add_subject">AddSubjectActivity</string>
    <string name="question">\?</string>
    <string name="sasubjectid_">SASubjectID:</string>
    <string name="title_activity_edit_subject">EditSubjectActivity</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="longitude_">Longitude:</string>
    <string name="latitude_">Latitude:</string>
    <string name="speed_">Speed:</string>
    <string name="altitud_">Altitude:</string>
    <string name="tagTrunOffGps">Please turn off your GPS for battery saving</string>
    <string name="btnTurnOffGps">Turn Off GPS</string>
    <string name="btnTurnOnGps">Turn On GPS</string>
    <string name="tagTurnOnGPS">Please turn on your GPS to get your global position</string>
    <string name="btnCancel">Cancel</string>
    <string name="bearing_">Bearing:</string>
    <string name="get_position">Get Position</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="second">Second</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="global_positioning_system">Global Positioning System</string>
    <string name="title_activity_afda">Afda</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_report_data">ReportDataActivity</string>
    <string name="reports">Reports</string>
    <string name="high_fever_on_child">High Fever on Child</string>
    <string name="dummy_report">Dummy Report</string>
    <string name="high_fever_on_grown_ups">High Fever on Grown Ups</string>
    <string name="title_activity_bar_code_reader">BarCodeReaderActivity</string>
    <string name="btnScan">Scan</string>
    <string name="barcode_reader">BarCode Reader</string>
    <string name="loading">Loading</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="language_selector">Language Selector</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_questionaries">QuestionariesActivity</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="qm">QM</string>
    <string name="title_activity_studies">StudiesActivity</string>
    <string name="questionarie_">Questionarie:</string>
    <string name="select_the_questionarie_to_work_with">Select the questionarie to work with</string>
    <string name="questionarie">Questionarie</string>
    <string name="studies">Studies</string>
    <string name="select_the_studie_to_work_with">Select the study to work with</string>
    <string name="studie_">&quot;Study : &quot;</string>
    <string name="tap_the_screen_to_begin_qm">Tap the Screen to Begin QM</string>
    <string name="time">Time:</string>
    <string name="nmea">NMEA:</string>
    <string name="satellite">Satellite:</string>
    <string name="txt_main_btn_loadStudio">Select an Studio</string>
    <string name="txt_main_btn_open_new_studio">Open New Studio</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
