<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" 
  android:orientation="vertical" 
  android:layout_gravity="center_horizontal">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="5dip"
    android:gravity="center"
    android:text="@string/tagTrunOffGps"
    android:textSize="20sp" >

</TextView>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_margin="5dip">

    <Button
        android:id="@+id/btnTurnOffGps"
        android:layout_width="130dip"
        android:layout_height="wrap_content"
        android:text="@string/btnTurnOffGps" />

	<Button
	    android:id="@+id/btnCancelGps"
	    android:layout_width="130dip"
	    android:layout_height="wrap_content"
	    android:text="@string/btnCancel" />

</LinearLayout>
</LinearLayout>
