<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/reports"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" >

                    <RadioGroup
                        android:id="@+id/rgReports"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center" >

                        <RadioButton
                            android:id="@+id/rbHighFChild"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/high_fever_on_child" />

                        <RadioButton
                            android:id="@+id/rbDummyR"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|left"
                            android:text="@string/high_fever_on_grown_ups" />
                    </RadioGroup>

                </RelativeLayout>
            </LinearLayout>
             <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnBackra"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:text="@string/backbutton"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnNextra"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/nextbutton"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>