<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:id="@+id/Layout"
    android:orientation="vertical" >

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tvStudyNameLong"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tvStudyNameShort"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionarie"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/RED" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_the_questionarie_to_work_with"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="80dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:singleLine="false"
                    android:text="@string/questionarie_"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/sQuestionarie"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp" />

            </RelativeLayout>
            
            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:text="@string/backbutton"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/nextbutton"
                    android:textSize="15sp" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

